--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,58 @@
+/* Import fonts */
+@import url( 'https://fonts.googleapis.com/css?family=Open+Sans|Roboto');
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Open Sans", Arial, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin: 10px 0;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 24px;
+}
+
+h4 {
+  font-size: 20px;
+}
+
+h5 {
+  font-size: 18px;
+}
+
+h6 {
+  font-size: 16px;
 }
 
 a {
   color: #00B7FF;
+}
+
+.popup {
+  display: inline-block;
+  vertical-align: middle;
+  
+  transition-property: transform;
+  transition-duration: .3s;
+}
+
+.popup:hover {
+  transform: scale(1.1);
 }
