--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,14 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1 class="popup"><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <header class="full-width">
+      <div class="container centered blue">
+        <h1>BattleShip</h1>
+        <h4 class="button blue lighter">Home</h4>
+        <h4 class="button blue lighter">Play</h4>
+        <h4 class="button blue lighter">Stats</h4>
+        <h4 class="button blue lighter">About</h4>
+      </div>
+    </header>
   </body>
 </html>
