--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,5 +14,15 @@
         <h4 class="button blue lighter">About</h4>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <h1>Test</h1>
+      </div>
+    </main>
+    <footer class="full-width">
+      <div class="container centered blue">
+          Hello world!
+      </div>
+    </footer>
   </body>
 </html>
