Try to add more style and stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,19 +9,18 @@
       <div class="container centered blue">
         <h1>BattleShip</h1>
         <h4 class="button blue lighter">Home</h4>
-        <h4 class="button blue lighter">Play</h4>
         <h4 class="button blue lighter">Stats</h4>
         <h4 class="button blue lighter">About</h4>
       </div>
     </header>
     <main>
       <div class="container">
-        <h1>Test</h1>
+        <%- include("content.ejs") %>
       </div>
     </main>
     <footer class="full-width">
       <div class="container centered blue">
-          Hello world!
+          <%- include("footer.ejs") %>
       </div>
     </footer>
   </body>
