--- a/views/content.ejs
+++ b/views/content.ejs
@@ -2,17 +2,19 @@
     <h1>Play anonymously</h1>
     <form action="/game" method="POST">
         <div class="align-right">
-            <label for="nickname">Nickname: </label><input type="text" name="nickname" class="textbox" required><br>
-            <label for="code">Join code: </label><input type="text" name="code" class="textbox darker" value="optional"><br>
-            <button type="submit" class="button blue"><b>Submit</b></button>
+            <label for="nickname" class="label">Nickname: </label>&nbsp;<input type="text" name="nickname" class="textbox" required style="margin-bottom: 5px;"><br>
+            <label for="code" class="label">Join code: </label>&nbsp;<input type="text" name="code" class="textbox" placeholder="optional"><br>
+            <button type="submit" class="button blue"><h6>Submit</h6></button>
         </div>
     </form>
 </div>
 
 <div class="column right centered">
-    <p>B</p>
+    <h1>We might add other login options here</h1>
 </div>
 
 <div class="centered center">
-    <h1>How does this game work!</h1>
+    <h1>How does this game work?</h1>
+    <p>It has revitalising gameplay consisting of clicking the battlefield, placing boats and exploding bombs!</p>
+    <p></p>
 </div>
