--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     </header>
     <main>
       <div class="container">
-        <%- include("content.ejs") %>
+        <%- include(content) %>
       </div>
     </main>
     <footer class="full-width">
