--- a/views/content.ejs
+++ b/views/content.ejs
@@ -16,5 +16,5 @@
 <div class="centered center">
     <h1>How does this game work?</h1>
     <p>It has revitalising gameplay consisting of clicking the battlefield, placing boats and exploding bombs!</p>
-    <p>there will be more stuff here eventually, but not for now :p/p>
+    <p>there will be more stuff here eventually, but not for now :p</p>
 </div>
