--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,14 +4,15 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/scripts/messages.js"></script>
   </head>
   <body>
     <header class="full-width">
       <div class="container centered blue">
         <h1>BattleShip</h1>
-        <h4 class="button blue lighter">Home</h4>
-        <h4 class="button blue lighter">Stats</h4>
-        <h4 class="button blue lighter">About</h4>
+        <h4 class="button blue lighter"><a href="/">Home</a></h4>
+        <h4 class="button blue lighter"><a href="/stats">Stats</a></h4>
+        <h4 class="button blue lighter"><a href="/about">About</a></h4>
       </div>
     </header>
     <main>
