Added live stats

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
       <div class="container centered blue">
         <h1>BattleShip</h1>
         <h4 class="button blue lighter"><a href="/">Home</a></h4>
-        <h4 class="button blue lighter"><a href="/stats">Stats</a></h4>
+        <h4 class="button blue lighter"><a href="/stats">Live stats</a></h4>
         <h4 class="button blue lighter"><a href="/about">About</a></h4>
       </div>
     </header>
