Fixed buttons, made stats updates faster without extra load on the server and added extra nickname verification

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header class="full-width">
-      <div class="container centered blue">
+      <div id="menu" class="container centered blue">
         <h1>BattleShip</h1>
-        <h4 class="button blue lighter"><a href="/">Home</a></h4>
-        <h4 class="button blue lighter"><a href="/stats">Live stats</a></h4>
-        <h4 class="button blue lighter"><a href="/about">About</a></h4>
+        <a href="/"><h4 class="button blue lighter">Home</h4></a>
+        <a href="/stats"><h4 class="button blue lighter">Live stats</h4></a>
+        <a href="/about"><h4 class="button blue lighter">About</h4></a>
       </div>
     </header>
     <main>
