--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,9 +1,9 @@
 <div id="error-box"></div>
 <div id="stats">
-    <p id="stat_playersOnline">Players online: <bold><em>%stat%</em></bold></p>
-    <p id="stat_GamesInProgress">Games in progress: <bold><em>%stat%</em></bold></p>
-    <p id="stat_GamesPlayedToday">Games played today: <bold><em>%stat%</em></bold></p>
-    <p id="stat_GamesPlayedTotal">Games played total: <bold><em>%stat%</em></bold></p>
+    <p id="stat_playersOnline">Players online: <strong><em>%stat%</em></strong></p>
+    <p id="stat_GamesInProgress">Games in progress: <strong><em>%stat%</em></strong></p>
+    <p id="stat_GamesPlayedToday">Games played today: <strong><em>%stat%</em></strong></p>
+    <p id="stat_GamesPlayedTotal">Games played total: <strong><em>%stat%</em></strong></p>
 </div>
 
 <script src="/scripts/stats.js"></script>
