--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,9 +1,14 @@
-<div id="error-box"></div>
-<div id="stats">
-    <p id="stat_playersOnline">Players online: <strong><em>%stat%</em></strong></p>
-    <p id="stat_GamesInProgress">Games in progress: <strong><em>%stat%</em></strong></p>
-    <p id="stat_GamesPlayedToday">Games played today: <strong><em>%stat%</em></strong></p>
-    <p id="stat_GamesPlayedTotal">Games played total: <strong><em>%stat%</em></strong></p>
+<div class="centered content">
+    <div id="error-box"></div>
+    <div id="stats">
+        <p class="statHeader">Players online</p>
+        <span id="stat_playersOnline" class="statStyle">%stat%</span>
+        <p class="statHeader">Games in progress</p>
+        <span id="stat_GamesInProgress" class="statStyle">%stat%</span>
+        <p class="statHeader">Games played today</p>
+        <span id="stat_GamesPlayedToday" class="statStyle">%stat%</span>
+        <p class="statHeader">Games played total</p>
+        <span id="stat_GamesPlayedTotal" ó class="statStyle">%stat%</span>
+    </div>
 </div>
-
 <script src="/scripts/stats.js"></script>
