--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,5 +1,4 @@
 <div class="centered content">
-    <div id="error-box"></div>
     <div id="stats">
         <p class="statHeader">Players online</p>
         <span id="stat_playersOnline" class="statStyle">%stat%</span>
@@ -10,5 +9,6 @@
         <p class="statHeader">Games played total</p>
         <span id="stat_GamesPlayedTotal" ó class="statStyle">%stat%</span>
     </div>
+    <div id="error-box-stats"></div>
 </div>
 <script src="/scripts/stats.js"></script>
