--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,2 +1,7 @@
 <canvas class="full-width" id="gameCanvas"></canvas>
+<canvas class="full-width" id="gameCanvas"></canvas>
+<script>
+    nickname="<%- name %>"
+    code = "<%- c %>"
+</script>
 <script src="../scripts/game.js"></script>
