Added private/public games. Main form needs some CSS love

--- a/views/content.ejs
+++ b/views/content.ejs
@@ -5,6 +5,7 @@
         <div class="align-right">
             <label for="nickname" class="label">Nickname: </label>&nbsp;<input type="text" name="nickname" class="textbox" required style="margin-bottom: 5px;"><br>
             <label for="code" class="label">Join code: </label>&nbsp;<input type="text" name="code" class="textbox" placeholder="optional"><br>
+            <label for="code" class="label">Private game: </label>&nbsp;<input type="checkbox" name="private"><br>
             <button id="submit-game-form" type="submit" class="button blue"><h6>Submit</h6></button>
         </div>
     </form>
