--- a/views/game.ejs
+++ b/views/game.ejs
@@ -3,5 +3,6 @@
 <script>
     nickname="<%- name %>"
     code = "<%- c %>"
+    private = "<%- priv %>" || "off";
 </script>
 <script src="../scripts/game.js"></script>
