--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,12 @@
 /* Import fonts */
-@import url( 'https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Fira+Mono');
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Fira+Mono');
 /* Font stuff */
 
 body {
-  font: 14px "Open Sans", Arial, sans-serif;
-  padding: 0;
-  margin: 0;
+    font: 14px "Open Sans", Arial, sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 h1,
@@ -14,122 +15,122 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  margin: 0;
-  padding: 10px 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    margin: 0;
+    padding: 10px 0;
 }
 
 h1 {
-  font-size: 36px;
+    font-size: 36px;
 }
 
 h2 {
-  font-size: 30px;
+    font-size: 30px;
 }
 
 h3 {
-  font-size: 24px;
+    font-size: 24px;
 }
 
 h4 {
-  font-size: 20px;
+    font-size: 20px;
 }
 
 h5 {
-  font-size: 18px;
+    font-size: 18px;
 }
 
 h6 {
-  font-size: 16px;
+    font-size: 16px;
 }
 
 /* Classes */
 
 .centered {
-  text-align: center;
+    text-align: center;
 }
 
 .full-width {
-  width: 100%;
+    width: 100%;
 }
 
 .container {
-  display: block;
-  min-height: 100% !important;
-  box-sizing: border-box;
-  flex: 1 0 auto;
+    display: block;
+    min-height: 100% !important;
+    box-sizing: border-box;
+    flex: 1 0 auto;
 }
 
 .button {
-  padding: 8px 16px;
-  text-align: center;
-  cursor: pointer;
-  border: none;
-  display: inline-block;
-  margin: 5px;
-  font-family: "Roboto", sans-serif;
+    padding: 8px 16px;
+    text-align: center;
+    cursor: pointer;
+    border: none;
+    display: inline-block;
+    margin: 5px;
+    font-family: "Roboto", sans-serif;
 }
 
 .button:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .content {
-  padding: 10px;
+    padding: 10px;
 }
 
 .nopad {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 .textbox {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  padding: 5px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    padding: 5px;
 }
 
 .column {
-  width: 45%;
-  height: 50%;
+    width: 45%;
+    height: 50%;
 }
 
 .left {
-  float: left;
-  margin-left: 5%;
+    float: left;
+    margin-left: 5%;
 }
 
 .right {
-  float: right;
-  margin-right: 5%;
+    float: right;
+    margin-right: 5%;
 }
 
 .center {
-  float: left;
-  margin: 5%;
-  width: 90%;
-  height: 50%;
-  top: 50%;
+    float: left;
+    margin: 5%;
+    width: 90%;
+    height: 50%;
+    top: 50%;
 }
 
 .label {
-  font-size: 18px;
-  font-weight: 400;
+    font-size: 18px;
+    font-weight: 400;
 }
 
 .statStyle {
-  font-weight: bolder;
+    font-weight: bolder;
 }
 
 #stats {
-  font-family: 'Fira Mono', monospace !important;
-  font-weight: bold;
-  font-size: 18px;
+    font-family: 'Fira Mono', monospace !important;
+    font-weight: bold;
+    font-size: 18px;
 }
 
 .statHeader {
-  margin-top: 20px;
+    margin-top: 20px;
 }
 
 #gameCanvas {
@@ -138,63 +139,131 @@ h6 {
 
 /* Julius pls fix */
 
-#menu > a {
-  color: inherit;
-  text-decoration: inherit;
+#menu>a {
+    color: inherit;
+    text-decoration: inherit;
+}
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /* Colors */
 
 .blue {
-  background-color: #1976d2;
+    background-color: #1976d2;
 }
 
 .blue .lighter {
-  background-color: #63a4ff;
+    background-color: #63a4ff;
 }
 
 .darker {
-  background-color: #e0e0e0;
+    background-color: #e0e0e0;
+}
+
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
 }
 
 /* Animations */
 
 .popup {
-  display: inline-block;
-  vertical-align: middle;
-  transition-property: transform;
-  transition-duration: .3s;
+    display: inline-block;
+    vertical-align: middle;
+    transition-property: transform;
+    transition-duration: .3s;
 }
 
 .popup:hover {
-  transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 /* footer stuff */
 
 footer {
-  flex-shrink: 0;
-  margin-top: auto;
+    flex-shrink: 0;
+    margin-top: auto;
 }
 
 /* Stupid shit to fix stupidness */
 
 body,
 html {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 * {
-  margin: 0;
+    margin: 0;
 }
 
 label {
-  width: 20%;
-  display: inline-block;
-  text-align: right;
+    width: 20%;
+    display: inline-block;
+    text-align: right;
 }
