--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/scripts/messages.js"></script>
+    <script src="/scripts/generic.js"></script>
   </head>
   <body>
     <header class="full-width">
@@ -25,5 +26,18 @@
           <%- include("footer.ejs") %>
       </div>
     </footer>
+    <button id="myBtn">Open Modal</button>
+    
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+    
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close" onclick="modal.fadeOut()">&times;</span>
+        <h1 id="modal-title"></h1>
+        <p id="modal-text"></p>
+      </div>
+    
+    </div>
   </body>
 </html>
