--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,4 +1,4 @@
-<canvas class="full-width" id="gameCanvas"></canvas>
+<canvas id="gameCanvas" width="800", height="500" style="background-color:black"></canvas>
 <script>
     nickname="<%- name %>"
     code = "<%- c %>"
