--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,7 +133,6 @@ h6 {
     margin-top: 20px;
 }
 
-
 /* Julius pls fix */
 
 #menu>a {
@@ -167,15 +166,15 @@ h6 {
     margin: 15% auto;
     /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
     /* Could be more or less, depending on screen size */
 }
 
-#modal-head{
+#modal-head {
     padding: 5px 20px;
 }
 
-#modal-text{
+#modal-text {
     padding: 5px 20px 20px 20px;
 }
 
@@ -195,6 +194,12 @@ h6 {
     cursor: pointer;
 }
 
+#gameCanvas {
+    padding: 0;
+    margin: auto;
+    display: block;
+}
+
 /* Colors */
 
 .blue {
@@ -207,27 +212,6 @@ h6 {
 
 .darker {
     background-color: #e0e0e0;
-}
-
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgb(0, 0, 0);
-    /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black w/ opacity */
 }
 
 /* Animations */
