Added some more hit functionality and client-side functions to communicate with the server

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -1,4 +1,4 @@
-<canvas id="gameCanvas" width="1600", height="800">
+<canvas id="gameCanvas" width="1366", height="768">
     <h1>Your browser does not support the HTML5 canvas</h1>
     <p>Try Chrome or Firefox or Edge or something</p>
 </canvas>
@@ -11,3 +11,4 @@
 <img src="/images/boom.gif" id="boom" hidden>
 <script src="/scripts/drawing.js"></script>
 <script src="../scripts/game.js"></script>
+<!-- original: width="1600", height="800" -->
